<resources>
    <string name="app_name">宠宝</string>
    <string name="home_page">首页</string>
    <string name="pet_center">宠物中心</string>
    <string name="pet_friend">宠友圈</string>
    <string name="location_ring">定位环</string>
    <string name="me">我的</string>
    <string name="look_rank">查看排名</string>
    <string name="today_bushu">今日步数</string>
    <string name="dianliang">电&#160;&#160;&#160;&#160;&#160;&#160;量</string>
    <string name="contact_pet">联系爱宠</string>
    <string name="manager">管理</string>
    <string name="pet_guid">宠物指南</string>
    <string name="pet_encyclopedia">宠物百科</string>
    <string name="pet_public_welfare">宠物公益</string>
    <string name="pet_hospital">宠物医院</string>
    <string name="choice_article">精选推文</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="liked">点赞</string>
    <string name="comment">评论</string>
    <string name="selected_tweets">SELECTED TWEETS</string>
    <string name="other_article">其他推文</string>
    <string name="other_tweets">OTHER TWEETS</string>
    <string name="change_a_batch">OTHER TWEETS</string>
    <string name="my_movement">我的动态</string>
    <string name="my_pet">我的宠物</string>
    <string name="attention_people">关注的人</string>
    <string name="my_collection">我的收藏</string>
    <string name="pet_report">宠物告示</string>
    <string name="jiling_guanli">寄领管理</string>
    <string name="order">订单</string>
    <string name="account">账户</string>
    <string name="suggest">意见</string>
    <string name="about">关于</string>
    <string name="not_login">未登录</string>
    <string name="pet_lingyang">宠物领养</string>
    <string name="pet_shide">宠物拾得</string>
    <string name="pet_zoushi">宠物走失</string>
    <string name="pet_jiyang">宠物寄养</string>
    <string name="distance_me">离我:</string>
    <string name="jiyang_hj">寄养环境</string>
    <string name="danyuan_hj">单元住宅环境</string>
    <string name="jiyang_zp">寄养照片</string>
    <string name="fangjian_js">房间介绍</string>
    <string name="qita_fw">其他服务</string>
    <string name="jidi_ms">基地描述</string>
    <string name="jidi_weizhi">基地位置</string>
    <string name="apply_jiyang">申请寄养</string>
    <string name="pet_type">种类：</string>
    <string name="pet_name">名称：</string>
    <string name="pet_name_2">宠物名称</string>
    <string name="pet_sex">性别：</string>
    <string name="pet_age">年龄：</string>
    <string name="age">岁</string>
    <string name="pet_lingyang_status">领养状态：</string>
    <string name="pet_lingyang_require">领养要求</string>
    <string name="pet_jieshao">宠物介绍：</string>
    <string name="lingyang_pet">我要领养它</string>
    <string name="lingyang_detail">领养详情</string>
    <string name="input_lingyang_ziliao">填写领养人资料</string>
    <string name="lingyangren_name">领养人姓名</string>
    <string name="please_input_your_name">请输入您的姓名</string>
    <string name="contact_phone">联系号码</string>
    <string name="please_input_your_phone">请输入您的手机号</string>
    <string name="contact_address">联系住址</string>
    <string name="please_input_your_address">请输入您的住址</string>
    <string name="rec_send_way">接送方式</string>
    <string name="please_select_rec_send_way">请选择接送方式</string>
    <string name="rec_send_way_1">平台接送</string>
    <string name="rec_send_way_2">自己接送</string>
    <string name="rec_send_way_3">其它</string>
    <string name="lingyang_time">领养时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="please_input_start_time">请选择开始时间</string>
    <string name="please_input_end_time">请选择结束时间</string>
    <string name="end_time_must_much_thaan_start_time">结束时间需大于开始时间</string>
    <string name="lingyang_yuanyin">领养原因</string>
    <string name="please_input_lingyang_yuanying">请选择领养原因</string>
    <string name="lingyang_yuanyin_1">家中老人需要陪伴</string>
    <string name="lingyang_yuanyin_2">守护家园</string>
    <string name="lingyang_yuanyin_3">增添生活乐趣</string>
    <string name="add_beizhu">添加备注</string>
    <string name="pet_detail">宠物详情</string>
    <string name="shide_time">拾得日期</string>
    <string name="zoushi_time">走失日期</string>
    <string name="shide_address">拾得地址</string>
    <string name="zoushi_address">走失地址</string>
    <string name="shide_pet_type">宠物类型</string>
    <string name="shide_pet_sex">宠物性别</string>
    <string name="shide_pet_miaoshu">宠物描述</string>
    <string name="contact_person">联系人</string>
    <string name="contact_way">联系方式</string>
    <string name="please_select_time">请选择时间</string>
    <string name="please_input_address">请输入地址</string>
    <string name="shide_pet_gaoshi">拾宠告示</string>
    <string name="pet_type_2">宠物品种</string>
    <string name="please_select_pet_type">请选择宠物类型</string>
    <string name="please_select_pet_type_2">请选择宠物品种</string>
    <string name="please_select_type">请选择类型</string>
    <string name="please_select_type_2">请选择品种</string>
    <string name="please_select_pet_birth">请选择宠物生日</string>
    <string name="please_select_pet_sex">请选择宠物性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="not_know_sex">不清楚</string>
    <string name="add_pet_picture">添加图片</string>
    <string name="sure_publish">确认发布</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="please_input_contact_way">请输入联系方式</string>
    <string name="add_pet_miaoshu">添加描述</string>
    <string name="diushi_time">丢失日期</string>
    <string name="diushi_address">丢失地址</string>
    <string name="diushi_ai_chong">爱宠丢失</string>
    <string name="waiting_lingtang">待领养</string>
    <string name="had_lingyang">已领养</string>
    <string name="xx_price">￥%1$s/月</string>
    <string name="not_jiyang">未寄养</string>
    <string name="jiyang_zhong">寄养中</string>
    <string name="jiyang_jishu">寄养结束</string>
    <string name="save">保存</string>
    <string name="jiangyang_pet_age">宠物年龄</string>
    <string name="jiyang_people_name">寄养人姓名</string>
    <string name="jiyang_address">寄养住址</string>
    <string name="jiyang_reason">寄养原因</string>
    <string name="please_select_jiyang_reason">请选择寄养原因</string>
    <string name="please_add_pet_photos">请添加宠物照片</string>
    <string name="weiyang_yaoqiu">喂养要求</string>
    <string name="mianyi_qingkuang">免疫情况</string>
    <string name="mianyi_shijian">免疫时间</string>
    <string name="last_mianyi_shijian">最近免疫时间</string>
    <string name="please_input_weiyang_yaoqiu">请输入您宠物的喂养要求</string>
    <string name="please_input_mianyi_shijian">请选择免疫时间</string>
    <string name="please_input_last_mianyi_shijian">请选择最近免疫时间</string>
    <string name="please_select_mianyi_qingkuang">请选择免疫情况</string>
    <string name="please_input_beizhu">请输入备注</string>
    <string name="please_input_pet_age">请输入宠物年龄</string>
    <string name="please_input_bumber">请输入数字</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="jiyang_pet_age">宠物年龄</string>
    <string name="not_mianyi">未免疫</string>
    <string name="had_mianyi">已免疫</string>
    <string name="weizhi">未知</string>
    <string name="jiyang_yuanyin_1">出差</string>
    <string name="jiyang_yuanyin_2">回老家</string>
    <string name="jiyang_yuanyin_3">上班忙</string>
    <string name="add_pet">添加宠物</string>
    <string name="not_tianxie">未填写</string>
    <string name="birth_day">出生年月</string>
    <string name="pet_sex_2">性别</string>
    <string name="weight">体重</string>
    <string name="is_sterilization">是否绝育</string>
    <string name="expect_message">特别信息</string>
    <string name="ta_shi_tiao_pi_gui">TA是调皮鬼么？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="not">不是</string>
    <string name="not_sure">不确定</string>
    <string name="danzi_tebie_xiao">TA胆子特别小？</string>
    <string name="hao_xiangchu">TA和其他动物相处友好么？</string>
    <string name="pet_jianjie">宠物简介</string>
    <string name="pet_jianjie_sample">对宠物进行简单说明，比如：宠物是否胆小、调皮等</string>
    <string name="pet_weight_2">宠物体重</string>
    <string name="your_pet_weight">您宠物的体重是...</string>
    <string name="please_seclect_avater">请选择头像</string>
    <string name="please_seclect_pet_is_sterilization">请选择宠物是否绝育</string>
    <string name="phone_number">手机号</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="password">密码</string>
    <string name="register">注册账号</string>
    <string name="forget_pas">忘记密码</string>
    <string name="please_input_pas">请输入密码</string>
    <string name="login">登录</string>
    <string name="or">或</string>
    <string name="find_pas">找回密码</string>
    <string name="please_input_phone">请输入账号的手机号码</string>
    <string name="ver_code">验证码</string>
    <string name="please_input_ver_code">请输入动态验证码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="new_pas">新密码</string>
    <string name="resend_ver_code">%1$s后重发</string>
    <string name="please_input_new_pas">请输入新密码</string>
    <string name="sure_pas">确认密码</string>
    <string name="please_input_sure_pas">请输入确认密码</string>
    <string name="submit">提交</string>
    <string name="new_pas_not_equal_sure_pas">确认密码与新密码不同</string>
    <string name="nickname">昵称</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="please_set_pas">请设置密码</string>
    <string name="please_input_correct_phone">手机号格式不正确</string>
    <string name="agree_pet_privacy_and_register">同意服务条款并注册</string>
    <string name="pet_privacy">《宠宝服务条款》</string>
    <string name="resend_code">%1$sS后重发</string>
    <string name="complaint">投诉</string>
    <string name="select_complaint">请选择投诉的原因：</string>
    <string name="complaint_content_1">发布不适当内容对我骚扰</string>
    <string name="complaint_content_2">存在欺诈骗钱行为</string>
    <string name="complaint_content_3">侵权行为</string>
    <string name="complaint_content_4">发布仿冒品信息</string>
    <string name="search_content">搜索指定内容... ...</string>
    <string name="search_content_1">商品</string>
    <string name="search_content_2">文章</string>
    <string name="search_content_3">用户</string>
    <string name="search_content_4">动态</string>
    <string name="search_content_5">宠友圈</string>
    <string name="search_content_6">聊天</string>
    <string name="raise_pet_advisory">养宠咨询</string>
    <string name="follow_wechat_get_more">关注微信，了解更多资讯</string>
    <string name="leave_message">留个言吧... ...</string>
    <string name="detail_msg">详细信息</string>
    <string name="area">地区</string>
    <string name="album">相册</string>
    <string name="send_msg">发消息</string>
    <string name="pass_verify">通过验证</string>
    <string name="add_friend">加好友</string>
    <string name="follow_he">关注他</string>
    <string name="verify_friend">验证好友</string>
    <string name="pass">通过</string>
    <string name="added">已添加</string>
    <string name="dai_chaxun_apply">待查询申请</string>
    <string name="dai_yanzheng">待验证</string>
    <string name="jujue">拒绝</string>
    <string name="message">消息</string>
    <string name="publish">发布</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="article">文章</string>
    <string name="month">月</string>
    <string name="publish_video">发布视频</string>
    <string name="add_video_des">添加视频描述... ...</string>
    <string name="record_video">拍摄</string>
    <string name="select_video">选择视频</string>
    <string name="publish_article">发布文章</string>
    <string name="article_type">文章类型</string>
    <string name="publish_article_pic">上传封面</string>
    <string name="article_title">文章标题</string>
    <string name="write_something">写点什么... ...</string>
    <string name="please_input_title">请填写文章标题</string>
    <string name="please_input_content">请填写文章内容</string>
    <string name="please_select_mian_pic">请上传封面图片</string>
    <string name="please_select_article_type">请选择文章类型</string>
    <string name="publish_picture">发布照片</string>
    <string name="add_picture_des">添加照片描述... ...</string>
    <string name="album_select">相册选择</string>
    <string name="please_select_photos">请选择照片</string>
    <string name="personal_prdfile">个人资料</string>
    <string name="avater">头像</string>
</resources>