<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

<ScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_255_255_255"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shide_time"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvShideTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/please_select_time"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shide_address"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etShideAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:gravity="center_vertical"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/please_input_address"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shide_pet_type"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvShidePetType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/please_select_pet_type"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_type_2"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvShidePetType2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/please_select_pet_type_2"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shide_pet_sex"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvMale"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:text="@string/male"
                    android:textColor="@color/color_255_255_255"
                    android:background="@drawable/bg_verify_friend"
                    android:gravity="center"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvFemale"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:text="@string/female"
                    android:textColor="@color/color_33_33_33"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tvNotKnow"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:text="@string/not_know_sex"
                    android:textColor="@color/color_33_33_33"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginLeft="20dp"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_person"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etShidePersonname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:gravity="center_vertical"
                    android:hint="@string/please_input_name"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_way"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etContactWay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/please_input_contact_way"
                    android:inputType="phone"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:text="@string/shide_pet_miaoshu"
                    android:textColor="@color/color_33_33_33"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/etPetMiaoshu"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:textColor="@color/color_33_33_33"
                    android:textColorHint="@color/color_99_99_99"
                    android:hint="@string/add_pet_miaoshu"
                    android:gravity="left|top"
                    android:background="@android:color/transparent"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:background="@color/color_255_255_255"
            android:layout_below="@id/ll1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_pet_picture"
                android:textColor="@color/color_33_33_33"
                android:layout_marginLeft="5dp"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/llPhotos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_255_255_255"
                android:layout_marginTop="3dp"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_submit"
        android:gravity="center"
        android:text="@string/sure_publish"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/color_255_255_255"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp" />

</LinearLayout>