<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include
        layout="@layout/layout_top_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_255_255_255"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_33_33_33"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:paddingRight="30dp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="75dp"
            android:hint="@string/please_input_phone"
            android:inputType="phone"
            android:textColorHint="@color/color_99_99_99"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/color_33_33_33" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_255_255_255"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_33_33_33"
            android:gravity="center_vertical"
            android:text="@string/ver_code"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etVerCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:paddingRight="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_marginLeft="75dp"
            android:hint="@string/please_input_ver_code"
            android:textColorHint="@color/color_99_99_99"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/color_33_33_33" />

        <TextView
            android:id="@+id/tvGetVerCode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_ff_73_73"
            android:gravity="center_vertical"
            android:text="@string/get_ver_code"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_255_255_255"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_33_33_33"
            android:gravity="center_vertical"
            android:text="@string/new_pas"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNewPas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:paddingRight="30dp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="75dp"
            android:hint="@string/please_input_new_pas"
            android:inputType="textPassword"
            android:textColorHint="@color/color_99_99_99"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/color_33_33_33" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/color_255_255_255"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_33_33_33"
            android:gravity="center_vertical"
            android:text="@string/sure_pas"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etSurePas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:paddingRight="30dp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="60dp"
            android:hint="@string/please_input_sure_pas"
            android:inputType="textPassword"
            android:textColorHint="@color/color_99_99_99"
            android:layout_gravity="center_vertical"
            android:maxLines="1"
            android:textColor="@color/color_33_33_33" />

    </LinearLayout>

</LinearLayout>