<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/color_f4_f4_f4"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="@color/color_255_255_255"
        android:alpha="0.5"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/color_255_255_255"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:src="@drawable/red_back"
            android:onClick="onBackClick"/>

        <ImageView
            android:id="@+id/ivRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/search"/>

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_search"
            android:layout_toLeftOf="@id/ivRight"
            android:layout_toRightOf="@id/ivLeft"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/color_33_33_33"
            android:textSize="13sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_99_99_99"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:text="@string/search_content"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="1"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_1"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="2"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_2"
            android:layout_marginLeft="60dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="3"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_3"
            android:layout_marginLeft="60dp"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="4"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_4"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="5"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_5"
            android:layout_marginLeft="52dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="6"
            android:textColor="@color/color_ff_73_73"
            android:text="@string/search_content_6"
            android:layout_marginLeft="52dp"
            android:textSize="13sp"/>

    </LinearLayout>

</LinearLayout>